--- a/index.ejs
+++ b/index.ejs
@@ -3,9 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Aurelia Navigation Skeleton</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="msapplication-TileImage" content="icon.png">
+    <meta name="msapplication-TileColor" content="#41403e">
+    <meta name="theme-color" content="#41403e">
+    <title>Recetin</title>
     <base href="<%- htmlWebpackPlugin.options.metadata.baseUrl %>">
     <link rel="icon" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="512x512" href="icon.png" />
+    <link href="manifest.json" rel="manifest" />
     <!-- imported CSS are concatenated and added automatically -->
   </head>
   <body aurelia-app="main">
